--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* GLOBAL */
 :root {
   --dark-blue: #363f5f;
-  --green: #49AA26;
+  --green: #49aa26;
   --light-green: #3dd705;
   --red: #e92929;
 }
@@ -22,7 +22,7 @@ body {
 .sr-only {
   position: absolute;
   width: 1px;
-  height: 1px; 
+  height: 1px;
   padding: 0;
   margin: -1px;
   overflow: hidden;
@@ -47,11 +47,11 @@ h2 {
 /* LINKS & BUTTONS */
 
 a {
- color: var(--green);
- text-decoration: none;
+  color: var(--green);
+  text-decoration: none;
 }
 
-a:hover{
+a:hover {
   color: var(--light-green);
 }
 
@@ -66,20 +66,18 @@ button {
 
   border-radius: 0.25;
   cursor: pointer;
-
 }
 
-button:hover{
-  background: var(--light-green)
-
+button:hover {
+  background: var(--light-green);
 }
 
 .button.new {
   display: inline-block;
-  margin-bottom: .8rem;
+  margin-bottom: 0.8rem;
 }
 
-.button.cancel{
+.button.cancel {
   color: var(--red);
   border: 2px var(--red) solid;
   border-radius: 0.25rem;
@@ -88,14 +86,13 @@ button:hover{
 
   display: flex;
   align-items: center;
-  justify-content:center;
+  justify-content: center;
 
   opacity: 0.6;
 }
 
 .button.cancel:hover {
   opacity: 1;
-
 }
 
 /* HEADER */
@@ -153,16 +150,14 @@ header {
 
 /* TABLE */
 #transaction {
-  display:block;
-  width:100%;
+  display: block;
+  width: 100%;
   overflow-x: auto;
 }
 #data-table {
   width: 100%;
   border-spacing: 0 0.5rem;
   color: #969cb3;
-
- 
 }
 
 table thead tr th:first-child,
@@ -197,15 +192,15 @@ table tbody td {
 }
 
 td.description {
-    color: var(--dark-blue);
+  color: var(--dark-blue);
 }
 
 td.income {
-    color: #12A454;
+  color: #12a454;
 }
 
 td.expense {
-    color:var(--red);
+  color: var(--red);
 }
 
 /* MODAL */
@@ -214,7 +209,7 @@ td.expense {
   width: 100%;
   height: 100%;
 
-  background-color: rgba(0,0,0,0.7);
+  background-color: rgba(0, 0, 0, 0.7);
 
   position: fixed;
   top: 0;
@@ -245,7 +240,7 @@ td.expense {
   max-width: 500px;
 }
 
-#form h2{
+#form h2 {
   margin-top: 0;
 }
 
@@ -276,13 +271,11 @@ input {
   width: 48%;
 }
 
-
-
 /* FOOTER */
 
 footer {
   text-align: center;
-  padding: 4rem  0 2rem;
+  padding: 4rem 0 2rem;
   color: var(--dark-blue);
   opacity: 0.6;
 }
